Change global projects to samples and samples subfolder to projects

--- a/_cards.ejs
+++ b/_cards.ejs
@@ -5,7 +5,7 @@
   <% path = '' %>
 <% } %>
 
-<% Object.entries(projects).forEach(function ([cardId, cardData]) { %>
+<% Object.entries(samples).forEach(function ([cardId, cardData]) { %>
 
   <a href="<%= path %><%= cardData.category %>.html" class="<%= cardData.category %> card">
     <div class="<%= cardData.color %> card-content">
