--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ a {
 }
 
 nav, footer, .landing {
-  margin-left: 2vw;
+  margin-left: 3vw;
 }
 
 /* HEADER */
@@ -133,11 +133,13 @@ footer p {
 
 .grid {
   width: 90vw;
-  margin-left: -.2em;
+  margin-left: -3vw;
+  margin-top: -3vh;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   align-content: flex-start;
+  align-self: center;
 }
 
 .grid .card {
@@ -315,6 +317,9 @@ footer p {
   }
   .grid {
     width: 75vw;
+    margin-left: 0;
+    margin-top: -2vh;
+    align-self: flex-start;
   }
   nav, footer, .landing {
     margin-left: 1vw;
