--- a/_layout.ejs
+++ b/_layout.ejs
@@ -5,6 +5,7 @@
     <title><%= owner %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/slideshow.css">
     <link rel="stylesheet" type="text/css" href="/css/contact.css">
@@ -26,6 +27,5 @@
     <script src="/js/grid.js"></script>
     <script src="/js/cards.js"></script>
     <script src="/js/here.js"></script>
-    <%# <script src="/js/slideshow.js"></script>%>
   </body>
 </html>
