--- a/_layout.ejs
+++ b/_layout.ejs
@@ -22,6 +22,7 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="/js/touch.js"></script>
     <script src="/js/landing.js"></script>
     <script src="/js/grid.js"></script>
     <script src="/js/cards.js"></script>
