--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,9 +1,9 @@
 <section class="landing <%- current.path[0] == 'work' ? 'hidden' : 'active' %>">
-  <h1 id="menu">
+  <h1>
     <!--  portrait-break (p-br) is active in portrait view
           landscape-break (l-br) is active in landscape view -->
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
-    <span class="print-design"><a href="print-design" class="f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">print design</a>,</span>
+    <span class="print-design"><a href="print-design" class="print-design f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">print design</a>,</span>
     <span class="illustration"><a href="illustration" class="illustration f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">illustration</a>,</span><br>
     <span class="identity-development"><a href="identity-development" class="identity-development f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">identity development</a>,</span><br class="p-br">
     <span class="exhibition-design p-br"><a href="exhibition-design" class="exhibition-design f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">exhibition design</a>,</span>
