Add ids to cards and slides

--- a/_cards.ejs
+++ b/_cards.ejs
@@ -7,7 +7,7 @@
 
 <% Object.entries(samples).forEach(function ([cardId, cardData]) { %>
 
-  <a href="<%= path %><%= cardData.category %>.html" class="<%= cardData.category %> card">
+  <a href="<%= path %><%= cardData.category %>.html" class="<%= cardData.category %> card" data-cardid="<%= cardId %>">
     <div class="<%= cardData.color %> card-content">
       <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
     </div>
