--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ footer p {
 
 .container {
   width: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
