--- a/css/contact.css
+++ b/css/contact.css
@@ -1,78 +1,69 @@
 .form-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-left: -2vw;
+  width: 94vw;
+  max-width: 900px;
+  margin: 0 auto;
+  padding-right: 2vw;
 }
 
-form {
-  width: 80vw;
+form ul {
   max-width: 700px;
-  display: flex;
-  flex-direction: column;
+  margin: 0 auto;
 }
 
-fieldset {
+form ul li {
   margin: .3em;
   border: none;
-  position: relative;
-  z-index: 1;
-  vertical-align: top;
-  overflow: hidden;
   display: flex;
+  flex-direction: column;
 }
 
-fieldset:first-of-type {
+form ul li:first-of-type {
   margin-bottom: 0;
 }
 
-fieldset:last-of-type {
+form ul li:last-of-type {
   margin-top: 0;
 }
 
-legend, input, textarea {
-  width: 100%;
+form ul li label {
+  visibility: hidden;
+  height: 0px;
+  max-width: 220px;
+}
+
+form ul li legend,
+form ul li input,
+form ul li textarea {
   font-size: 1.25em;
   line-height: 1.5;
   padding: .5em;
-  flex: 1;
+  margin-bottom: .4em;
+  border: none;
 }
 
-input, textarea {
+form ul li input,
+form ul li textarea {
   background-color: rgba(170, 170, 170, 0.2);
-  border: none;
   border-radius: 0;
   outline: none;
   font-family: inherit;
 }
 
-textarea {
+form ul li textarea {
   resize: none;
 }
 
-.button {
+form ul li .button {
   text-align: left;
   cursor: pointer;
   width: 30%;
   background-color: inherit;
 }
 
-label {
-  visibility: hidden;
-  height: 0px;
-}
-
 @media screen and (max-width: 750px) {
-  .form-container {
-    padding-right: 2vw;
-    margin-left: 0;
-  }
-  form {
-    width: 100%;
-  }
-  legend, input, textarea {
+  form ul li legend,
+  form ul li input,
+  form ul li textarea {
     font-size: 1em;
     line-height: 1.7;
   }
