--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html, body {
   height: 100%;
 }
 
-section, div, nav, footer , ul {
+section, div, nav, footer , form, ul {
   display: block;
 }
 
@@ -30,7 +30,7 @@ h1, h2, h3, h4 {
 }
 
 ul {
-  list-style: none;
+  list-style-type: none;
 }
 
 a {
