--- a/_landing.ejs
+++ b/_landing.ejs
@@ -9,16 +9,16 @@
     <span class="exhibition-design p-br f-b"><a href="exhibition-design" class="exhibition-design u-l <%- current.source != 'index' ? '' : 'hot' %>">exhibition design</a>,</span>
     <span class="exhibition-design f-b"><a href="exhibition-design" class="exhibition-design <%- current.source != 'index' ? '' : 'hot' %>">
       <span class="exhibition-design l-br"><span class="u-l">exhibition</span></span><br class="l-br">
-      <span class="exhibition-design l-br <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">design</span>,</span>
+      <span class="exhibition-design l-br"><span class="u-l">design</span>,</span>
     </a></span>
     <span class="special-projects f-b"><a href="special-projects" class="special-projects <%- current.source != 'index' ? '' : 'hot' %>">
-      <span class="special-projects p-br <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">special</span></span><br class="p-br">
+      <span class="special-projects p-br"><span class="u-l">special</span></span><br class="p-br">
       <span class="special-projects p-br"> <span class="u-l">projects</span>,</span>
     </a></span>
     <span class="special-projects l-br f-b"><a href="special-projects" class="special-projects u-l <%- current.source != 'index' ? '' : 'hot' %>">special projects</a>,</span>
     <span class="animation f-b"><a href="animation" class="animation u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
     <br class="l-br"> and<br class="p-br"> sometimes
     <span class="art-commissions f-b"><a href="art-commissions" class="art-commissions <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
-    <br>Click <span><a href="projects" id="work" class="u-l">here</a></span> to view some<br class="p-br"> work of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact.html" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
+    <br>Click <span><a href="projects" id="work" class="u-l">here</a></span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact.html" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
   </h1>
 </section>
