--- a/_layout.ejs
+++ b/_layout.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/contact.css">
   </head>
   <body>
-    <div class="wrapper">
+    <div id="page">
 
       <%- partial('_nav') %>
 
