--- a/css/contact.css
+++ b/css/contact.css
@@ -1,8 +1,8 @@
 .form-container {
   width: 94vw;
   max-width: 900px;
-  margin: 0 auto;
-  padding-right: 2vw;
+  /*margin: 0 auto;*/
+  /*padding-right: 2vw;*/
 }
 
 form ul {
