--- a/css/main.css
+++ b/css/main.css
@@ -48,11 +48,12 @@ a {
   padding: 0;
 }
 
-.wrapper {
-  width: 100%;
+#page {
+  width: 90%;
   height: 100%;
   min-height: 100%;
-  padding-left: 2vw;
+  margin: 0 auto;
+  /*padding-left: 2vw;*/
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -60,21 +61,21 @@ a {
 }
 
 nav, footer, .landing {
-  margin-left: 3vw;
+  /*margin-left: 3vw;*/
 }
 
 /* HEADER */
 
 nav {
   width: 100%;
-  height: 9vh;
+  height: 6vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 nav h2 {
-  font-size: 5vw;
+  font-size: 4vw;
 }
 
 /* FOOTER */
@@ -108,12 +109,11 @@ footer p {
 .landing,
 .landing.hidden {
   position: absolute;
-  margin-top: 3vw;
+  margin-top: 1.5em;
 }
 
 .landing h1 {
-  padding-top: .2em;
-  font-size: 7vw;
+  font-size: 6.5vw;
   line-height: 1.6;
 }
 
@@ -281,7 +281,7 @@ footer p {
 }
 
 .card-content.faded {
-  opacity: .2;
+  opacity: .1;
 }
 
 /* card order */
@@ -335,8 +335,10 @@ footer p {
 }
 
 @media screen and (orientation: landscape) {
-  .wrapper {
+  #page {
+    width: 100%;
     padding-left: 4vw;
+    margin: 0;
   }
   .grid {
     width: 75vw;
@@ -372,6 +374,9 @@ footer p {
 }
 
 @media screen and (orientation: landscape) and (min-width: 750px) {
+  nav {
+    height: 9vh;
+  }
   nav h2 {
     font-size: 2vw;
   }
