--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4 {
   font-weight: normal;
 }
 
-ul {
+ul, li {
   list-style-type: none;
 }
 
@@ -49,15 +49,16 @@ a {
 }
 
 #page {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  /*height: 100%;*/
   min-height: 100%;
   /*margin: 0 auto;*/
   padding-left: 2vw;
   display: flex;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;
   align-items: flex-start;
-  justify-content: flex-start;
+  justify-content: flex-start;*/
+  flex-direction: column;
 }
 
 nav, footer, .landing {
@@ -73,16 +74,12 @@ nav, footer {
 }
 
 /*
-HEADER
+HEADER & FOOTER
 */
 
 nav h2 {
   font-size: 5vw;
 }
-
-/*
-FOOTER
-*/
 
 footer {
   margin-top: auto;
@@ -98,7 +95,6 @@ MAIN
 
 .container {
   width: 100%;
-  /*height: 86vh;*/
   position: relative;
   flex: 1;
   display: flex;
@@ -147,7 +143,7 @@ GRID
   align-self: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /*grid-template-rows: auto;*/
+  grid-template-rows: repeat(5, 1fr);
   grid-gap: 2vw;
   /*display: flex;
   flex-flow: row wrap;
@@ -360,10 +356,23 @@ GRID
     margin-left: 0;
     align-self: flex-start;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: .1em;
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1vw;
   }
   nav, footer, .landing {
     margin-left: 1vw;
+  }
+  nav, footer {
+    height: 10vh;
+  }
+  nav h2 {
+    font-size: 5vh;
+  }
+  footer p {
+    font-size: 3vh;
+  }
+  .landing {
+    margin-top: 2vh;
   }
   .landing h1 {
     font-size: 3.9vw;
@@ -383,15 +392,12 @@ GRID
     margin-right: 5vw;
   }
   .grid .card {
-    flex: 1 0 20%;
-    padding: .2rem .2rem .6rem;
+    /*flex: 1 0 20%;
+    padding: .2rem .2rem .6rem;*/
   }
 }
 
 @media screen and (orientation: landscape) and (min-width: 750px) {
-  nav {
-    height: 9vh;
-  }
   nav h2 {
     font-size: 2vw;
   }
@@ -403,6 +409,6 @@ GRID
     line-height: 1.3;
   }
   .grid .card {
-    padding: 1vw 1vh;
+    /*padding: 1vw 1vh;*/
   }
 }
