--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ a {
 
 #page {
   width: 100vw;
-  /*height: 100%;*/
+  height: 100%;
   min-height: 100%;
   /*margin: 0 auto;*/
   padding-left: 2vw;
@@ -357,7 +357,7 @@ GRID
     align-self: flex-start;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1vw;
+    grid-gap: 2vw 2vh;
   }
   nav, footer, .landing {
     margin-left: 1vw;
@@ -405,7 +405,7 @@ GRID
     font-size: 1.2vw;
   }
   .landing h1 {
-    font-size: 4.2vw;
+    /*font-size: 4.1vw;*/
     line-height: 1.3;
   }
   .grid .card {
