--- a/css/contact.css
+++ b/css/contact.css
@@ -1,9 +1,7 @@
 .form-container {
-  width: 94vw;
   max-width: 900px;
-  margin-top: 2vh;
-  /*margin: 0 auto;*/
-  /*padding-right: 2vw;*/
+  padding-right: 2vw;
+  margin: 2vh 4vw 0 4vw;
 }
 
 form ul {
