--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,8 @@ a {
   width: 100vw;
   height: 100%;
   min-height: 100%;
-  /*margin: 0 auto;*/
   padding-left: 2vw;
   display: flex;
-  /*flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: flex-start;*/
   flex-direction: column;
 }
 
@@ -139,7 +135,6 @@ GRID
 .grid {
   width: 88%;
   margin-left: -2vw;
-  /*flex: 1;*/
   align-self: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -160,16 +155,13 @@ GRID
 }
 
 .grid .card-content {
-  /*display: block;
   width: 100%;
-  height: 100%;*/
 }
 
 .grid .card-image {
   width: 100%;
-  min-width: 50px;
-  /*height: 100%;*/
-  height: auto;
+  height: 100%;
+  min-height: 70px;
   vertical-align: middle;
 }
 
@@ -357,7 +349,7 @@ GRID
     align-self: flex-start;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-gap: 2vw 2vh;
+    grid-gap: 1vw;
   }
   nav, footer, .landing {
     margin-left: 1vw;
@@ -405,10 +397,7 @@ GRID
     font-size: 1.2vw;
   }
   .landing h1 {
-    /*font-size: 4.1vw;*/
+    font-size: 4.1vw;
     line-height: 1.3;
-  }
-  .grid .card {
-    /*padding: 1vw 1vh;*/
   }
 }
