--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,10 @@ nav, footer, .landing {
   margin-left: 7vw;
 }
 
+/*
+HEADER & FOOTER
+*/
+
 nav, footer {
   width: 100%;
   height: 7vh;
@@ -68,10 +72,6 @@ nav, footer {
   flex-direction: column;
   justify-content: center;
 }
-
-/*
-HEADER & FOOTER
-*/
 
 nav h2 {
   font-size: 5vw;
@@ -399,5 +399,8 @@ GRID
   .landing h1 {
     font-size: 4.1vw;
     line-height: 1.3;
+  }
+  .grid .card {
+    /*padding: 1vw 1vh;*/
   }
 }
