--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ a {
 
 #page {
   width: 100vw;
-  height: 100%;
+  /*height: 100%;*/
   min-height: 100%;
   padding-left: 2vw;
   display: flex;
@@ -155,13 +155,15 @@ GRID
 }
 
 .grid .card-content {
-  width: 100%;
+  /*width: 100%;*/
 }
 
 .grid .card-image {
   width: 100%;
-  height: 100%;
-  min-height: 70px;
+  /*height: 100%;*/
+  height: auto;
+  /*min-height: 70px;*/
+  min-height: 50px;
   vertical-align: middle;
 }
 
