fix navbar href toggle

--- a/public/_nav.ejs
+++ b/public/_nav.ejs
@@ -1,6 +1,5 @@
 <nav>
   <h2>
-    <span><a href="/">Fluora </a></span>
-    <span><a href="/work">Studio</a></span>
+    <a href="<%= current.path == 'index' ? '/work' : '/' %>">Fluora Studio</a>
   </h2>
 </nav>
