--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -23,6 +23,7 @@
     </div>
     <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>%>
     <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/Dynamic.js"
     <script src="/js/landing.js"></script>
     <script src="/js/grid.js"></script>
     <script src="/js/cards.js"></script>
