--- a/public/work/index.ejs
+++ b/public/work/index.ejs
@@ -1,6 +1,1 @@
-<div class="container">
-  <section class="grid active">
-    <%- partial('../_cards') %>
-  </section>
-  <%- partial('../_landing') %>
-</div>
+<%- partial('_cards') %>
