--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,6 +1,15 @@
-<div class="container">
-  <section class="grid hidden">
+<div id="main">
+
+  <section class="grid <%- current.source == 'index' ? 'hidden' : 'active' %>">
     <%- partial('_cards') %>
   </section>
+
+  <section class="landing <%- current.source == 'work' ? 'hidden' : 'active' %>">
     <%- partial('_landing') %>
+  </section>
+
+</div>
+
+<div id="slideshow" class="<%- current.source == 'projects' ? '' : 'display-none' %>">
+  <%- partial('_slides') %>
 </div>
