--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -14,11 +14,11 @@
 
       <%- partial('_nav') %>
 
-      <%- yield %>
+      <div id="main">
+        <%- yield %>
+      </div>
 
-      <footer>
-        <p>&copy; <%= new Date().getFullYear() %> <%= owner %></p>
-      </footer>
+      <%- partial('_footer') %>
 
     </div>
     <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>%>
