remove projects folder and gear up for slideshow page

--- a/public/work.ejs
+++ b/public/work.ejs
@@ -1,7 +1,9 @@
-<section class="landing hidden">
-  <%- partial('_landing') %>
-</section>
+<div id="main">
+  <section class="landing hidden">
+    <%- partial('_landing') %>
+  </section>
 
-<section class="grid active">
-  <%- partial('_cards') %>
-</section>
+  <section class="grid active">
+    <%- partial('_cards') %>
+  </section>
+</div>
