--- a/public/_cards.ejs
+++ b/public/_cards.ejs
@@ -1,6 +1,6 @@
 <% Object.entries(samples).forEach(function ([cardId, cardData]) { %>
 
-  <a href="<%= cardData.category %>.html" class="<%= cardData.category %> card" data-cardid="<%= cardId %>">
+  <a href="projects" class="<%= cardData.category %> card" data-cardid="<%= cardId %>">
     <div class="<%= cardData.color %> card-content">
       <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
     </div>
