--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,10 +1,12 @@
-<section class="landing active">
-  <%- partial('_landing') %>
-</section>
+<div id="main">
+  <section class="landing active">
+    <%- partial('_landing') %>
+  </section>
 
-<section class="grid hidden">
-  <%- partial('_cards') %>
-</section>
+  <section class="grid hidden">
+    <%- partial('_cards') %>
+  </section>
+</div>
 
 
 <%#
