--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -16,6 +16,8 @@
 
       <%- yield %>
 
+      <%- partial('_footer') %>
+
     </div>
     <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>%>
     <script src="/js/jquery-3.2.1.min.js"></script>
