fix urls for compiling

--- a/public/_landing.ejs
+++ b/public/_landing.ejs
@@ -18,5 +18,5 @@
     <span class="animation f-b"><a href="animation" class="animation u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
     <br class="l-br"> and<br class="p-br"> sometimes
     <span class="art-commissions f-b"><a href="art-commissions" class="art-commissions <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
-    <br>Click <span><a href="projects" id="work" class="u-l">here</a></span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact.html" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
+    <br>Click <span><a href="/projects.html" id="work" class="u-l">here</a></span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="/contact.html" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
   </h1>
