--- a/public/_nav.ejs
+++ b/public/_nav.ejs
@@ -1,5 +1,5 @@
 <nav id="nav">
   <h2>
-    <a href="<%= current.path == 'index' ? '/work' : '/' %>">Fluora Studio</a>
+    <a href="<%= current.path == 'index' ? '/work.html' : '/' %>">Fluora Studio</a>
   </h2>
 </nav>
