--- a/public/css/main.css
+++ b/public/css/main.css
@@ -165,6 +165,7 @@ GRID
   /*min-height: 70px;*/
   min-height: 50px;
   vertical-align: middle;
+  display: block;
 }
 
 .grid.hidden .card-image {
