--- a/public/_slides.ejs
+++ b/public/_slides.ejs
@@ -1,25 +1,31 @@
+<% var id = current.source - 1 %>
+<% var projects = Object.entries(public.projects._data) %>
+<% var startProjects = projects.splice(id, 1) %>
+<% var endProjects = projects.splice(0, id) %>
+<% var concatProjects = startProjects.concat(projects, endProjects) %>
+
 <section id="slideshow">
 
   <div class="row">
 
-    <%_ Object.entries(samples).forEach(function ([cardId, cardData]) { -%>
+    <%- concatProjects.forEach(function ([cardId, cardData]) { %>
 
       <div class="<%= cardData.category %> card" data-slideid="<%= cardId %>">
         <div class="<%= cardData.color %> card-content">
           <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
           <p>Client: <%= cardData.client %></p>
           <p>Project: <%= cardData.title %></p>
-          <%_ if(cardData.contributor) { -%>
+          <%- if(cardData.contributor) { %>
             <p>With: <%= cardData.contributor %></p>
-          <%_ } -%>
-          <%_ if(cardData.award) { -%>
+          <% } -%>
+          <%- if(cardData.award) { %>
             <p>* <%= cardData.award %></p>
-          <%_ } -%>
+          <% } -%>
         </div>
       </div>
 
-    <%_ }) -%>
+    <% }) -%>
 
   </div>
-  
+
 </section>
