--- a/public/projects/_slides.ejs
+++ b/public/projects/_slides.ejs
@@ -1,5 +1,5 @@
-<% var id = current.source - 1 %>
-<% var projects = Object.entries(public.projects._data) %>
+<% var id = current.source %>
+<% var projects = Object.entries(samples) %>
 <% var startProjects = projects.splice(id, 1) %>
 <% var endProjects = projects.splice(0, id) %>
 <% var concatProjects = startProjects.concat(projects, endProjects) %>
@@ -8,23 +8,23 @@
 
   <div class="row">
 
-    <%- concatProjects.forEach(function ([cardId, cardData]) { %>
+    <% concatProjects.forEach(function ([cardId, cardData]) { %>
 
       <div class="<%= cardData.category %> card" data-slideid="<%= cardId %>">
         <div class="<%= cardData.color %> card-content">
           <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
           <p>Client: <%= cardData.client %></p>
           <p>Project: <%= cardData.title %></p>
-          <%- if(cardData.contributor) { %>
+          <% if(cardData.contributor) { %>
             <p>With: <%= cardData.contributor %></p>
-          <% } -%>
-          <%- if(cardData.award) { %>
+          <% } %>
+          <% if(cardData.award) { %>
             <p>* <%= cardData.award %></p>
-          <% } -%>
+          <% } %>
         </div>
       </div>
 
-    <% }) -%>
+    <% }) %>
 
   </div>
 
