--- a/public/css/main.css
+++ b/public/css/main.css
@@ -149,20 +149,19 @@ GRID
 
 .grid .card {
   border: none;
-  display: flex;
+  display: block;
   /*flex: 1 0 33.3333%;*/
   /*padding: 1vw;*/
 }
 
 .grid .card-content {
-  /*width: 100%;*/
+  /* width: 100%; */
+  /* height: 100%; */
 }
 
 .grid .card-image {
   width: 100%;
-  /*height: 100%;*/
   height: auto;
-  /*min-height: 70px;*/
   min-height: 50px;
   vertical-align: middle;
   display: block;
@@ -404,7 +403,7 @@ GRID
     font-size: 2vw;
   }
   footer p {
-    font-size: 1.2vw;
+    font-size: 1vw;
   }
   .landing h1 {
     font-size: 4.1vw;
