--- a/public/css/slideshow.css
+++ b/public/css/slideshow.css
@@ -51,7 +51,8 @@
 
 @media screen and (orientation: landscape) {
   #slideshow .card-image {
-    width: 33.33vw;
+    width: auto;
+    height: 50vh;
   }
 }
 
