--- a/public/css/slideshow.css
+++ b/public/css/slideshow.css
@@ -7,6 +7,23 @@
   align-items: center;
 }
 
+
+@media screen and (orientation: landscape) {
+
+  @keyframes slideInFromRight {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  #slideshow {
+    animation: 1s ease-out 0s 1 slideInFromRight;
+  }
+}
+
 #slideshow .row {
   overflow-x: scroll;
   scroll-behavior: smooth;
