--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,7 @@
     <%- partial('_landing') %>
   </section>
 
-  <section class="grid hidden">
+  <section id="grid hidden">
     <%- partial('_cards') %>
   </section>
   
