--- a/public/work.ejs
+++ b/public/work.ejs
@@ -4,7 +4,7 @@
     <%- partial('_landing') %>
   </section>
 
-  <section class="grid active">
+  <section id="grid active">
     <%- partial('_cards') %>
   </section>
 
