--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,6 +1,6 @@
 <div id="main">
 
-  <section class="landing active">
+  <section id="landing active">
     <%- partial('_landing') %>
   </section>
 
