--- a/public/work.ejs
+++ b/public/work.ejs
@@ -1,6 +1,6 @@
 <div id="main">
 
-  <section class="landing hidden">
+  <section id="landing hidden">
     <%- partial('_landing') %>
   </section>
 
