--- a/public/index.ejs
+++ b/public/index.ejs
@@ -1,11 +1,11 @@
 <div id="main">
 
-  <section id="landing active">
+  <section id="landing" class="active">
     <%- partial('_landing') %>
   </section>
 
-  <section id="grid hidden">
+  <section id="grid" class="hidden">
     <%- partial('_cards') %>
   </section>
-  
+
 </div>
