--- a/public/work.ejs
+++ b/public/work.ejs
@@ -1,10 +1,10 @@
 <div id="main">
 
-  <section id="landing hidden">
+  <section id="landing" class="hidden">
     <%- partial('_landing') %>
   </section>
 
-  <section id="grid active">
+  <section id="grid" class="active">
     <%- partial('_cards') %>
   </section>
 
