--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,7 +17,7 @@ html, body {
   height: 100%;
 }
 
-section, div, nav, footer , form, ul {
+section, div, nav, footer, form, ul {
   display: block;
 }
 
@@ -219,7 +219,7 @@ GRID
   background-color: rgb(182, 126, 119);
 }
 
-.card .card-content.all-gray {
+#grid .card .card-content.all-gray {
   background-color: rgba(170, 170, 170, 0.2);
 }
 
