--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@ a {
 
 #page {
   width: 100vw;
-  /*height: 100%;*/
+  height: 100%;
   min-height: 100%;
   padding-left: 2vw;
   display: flex;
@@ -82,7 +82,7 @@ footer {
 }
 
 footer p {
-  font-size: 3vw;
+  font-size: 1.8vh;
 }
 
 /*
@@ -367,6 +367,26 @@ GRID
   }
 }
 
+@media screen and (orientation: portrait) and (min-width: 500px) {
+  nav {
+    height: 10vh;
+  }
+  nav h2 {
+    font-size: 4vw;
+  }
+  #landing h1 {
+    font-size: 5vw;
+  }
+  #grid {
+    width: 65%;
+    margin-left: 5vw;
+    align-self: flex-start;
+  }
+  footer p {
+    font-size: 1.75vh;
+  }
+}
+
 @media screen and (orientation: landscape) {
   #page {
     width: 100%;
@@ -388,10 +408,10 @@ GRID
     height: 10vh;
   }
   nav h2 {
-    font-size: 5vh;
+    font-size: 3vh;
   }
   footer p {
-    font-size: 3vh;
+    font-size: 2vh;
   }
   #landing {
     margin-top: 2vh;
@@ -413,18 +433,11 @@ GRID
   #grid {
     margin-right: 5vw;
   }
-  #grid .card {
-    /*flex: 1 0 20%;
-    padding: .2rem .2rem .6rem;*/
-  }
 }
 
 @media screen and (orientation: landscape) and (min-width: 750px) {
   nav h2 {
-    font-size: 2vw;
-  }
-  footer p {
-    font-size: 1vw;
+    font-size: 4vh;
   }
   #landing h1 {
     font-size: 4.1vw;
