--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@ a {
 
 #page {
   width: 100vw;
-  height: 100%;
+  /* height: 100%; */
   min-height: 100%;
   padding-left: 2vw;
   display: flex;
@@ -93,7 +93,7 @@ MAIN
   animation: fadein .3s ease;
   width: 100%;
   position: relative;
-  flex: 1;
+  flex: 1 1 auto;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -383,7 +383,7 @@ GRID
     align-self: flex-start;
   }
   footer p {
-    font-size: 1.75vh;
+    font-size: 1.6vh;
   }
 }
 
@@ -438,6 +438,9 @@ GRID
 @media screen and (orientation: landscape) and (min-width: 750px) {
   nav h2 {
     font-size: 4vh;
+  }
+  footer p {
+    font-size: 1.8vh;
   }
   #landing h1 {
     font-size: 4.1vw;
