--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title><%= owner %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="<%= description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/slideshow.css">
