--- a/public/css/main.css
+++ b/public/css/main.css
@@ -446,7 +446,174 @@ GRID
     font-size: 4.1vw;
     line-height: 1.3;
   }
-  #grid .card {
-    /*padding: 1vw 1vh;*/
+}
+
+/**
+* Slideshow
+**/
+
+#slideshow {
+  animation: fadein .7s ease;
+  width: 110vw;
+  margin-left: -2vw;
+  flex: 1;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+}
+
+#slideshow .row {
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
+  flex: 1;
+  display: flex;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  display: none;
+  background: transparent;
+}
+
+#slideshow .card {
+  padding: 1em;
+  white-space: nowrap;
+}
+
+#slideshow div.card:first-child {
+  padding-left: 9vw;
+}
+
+#slideshow div.card:last-child {
+  padding-right: 10vw;
+}
+
+#slideshow .card-image {
+  width: 80vw;
+  height: auto;
+}
+
+#slideshow .card p,
+#slideshow .card a {
+  display: block;
+  font-size: 1.9vh;
+  line-height: 1.5;
+  padding-left: .6vw;
+  margin-top: .7vh;
+}
+
+@media screen and (orientation: portrait) and (min-width: 500px) {
+  #slideshow .card-image {
+    width: 69vw;
+  }
+  #slideshow .card p,
+  #slideshow .card a {
+    font-size: 1.9vh;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #slideshow {
+    margin-left: -10vw;
+  }
+  #slideshow .card-image {
+    width: auto;
+    height: 54vh;
+  }
+  #slideshow .card p,
+  #slideshow .card a {
+    font-size: 2.4vh;
+  }
+}
+
+@media screen and (orientation: landscape) and (min-width: 750px) {
+  #slideshow .card {
+    padding: 2em;
+  }
+  #slideshow div.card:first-child {
+    padding-left: 13vw;
+  }
+  #slideshow div.card:last-child {
+    padding-right: 10vw;
+  }
+  #slideshow .card p,
+  #slideshow .card a {
+    font-size: 2vh;
+    line-height: 1.4;
+  }
+}
+
+/**
+* Contact page
+**/
+
+.form-container {
+  max-width: 900px;
+  padding-right: 2vw;
+  margin: 2vh 4vw 0 4vw;
+}
+
+form ul {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+form ul li {
+  margin: .3em;
+  border: none;
+  display: flex;
+  flex-direction: column;
+}
+
+form ul li:first-of-type {
+  margin-bottom: 0;
+}
+
+form ul li:last-of-type {
+  margin-top: 0;
+}
+
+form ul li label {
+  visibility: hidden;
+  height: 0px;
+  max-width: 220px;
+}
+
+form ul li legend,
+form ul li input,
+form ul li textarea {
+  font-size: 1.25em;
+  line-height: 1.5;
+  padding: .5em;
+  margin-bottom: .4em;
+  border: none;
+}
+
+form ul li input,
+form ul li textarea {
+  background-color: rgba(170, 170, 170, 0.2);
+  border-radius: 0;
+  outline: none;
+  font-family: inherit;
+}
+
+form ul li textarea {
+  resize: none;
+}
+
+form ul li .button {
+  text-align: left;
+  cursor: pointer;
+  width: 30%;
+  background-color: inherit;
+}
+
+@media screen and (max-width: 750px) {
+  form ul li legend,
+  form ul li input,
+  form ul li textarea {
+    font-size: 1em;
+    line-height: 1.7;
   }
 }
