combine js into one file and remove extra scripts and styles

--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -21,11 +21,10 @@
       <%- partial('_footer') %>
 
     </div>
-    <%# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>%>
     <script src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/landing.js"></script>
+    <script src="/js/main.js"></script>
+    <!-- <script src="/js/landing.js"></script>
     <script src="/js/grid.js"></script>
-    <script src="/js/cards.js"></script>
-    <%# <script src="/js/here.js"></script>%>
+    <script src="/js/cards.js"></script> -->
   </body>
 </html>
