--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -19,6 +19,7 @@
 
     </div>
     <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/fastclick.js"></script>
     <script src="/js/main.js"></script>
   </body>
 </html>
