--- a/public/_landing.ejs
+++ b/public/_landing.ejs
@@ -1,22 +1,26 @@
-  <h1>
-    <!--  portrait-break (p-br) is active in portrait view
-          landscape-break (l-br) is active in landscape view -->
-    Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
-    <span class="print-design f-b"><a href="print-design" class="print-design u-l <%- current.source != 'index' ? '' : 'hot' %>">print design</a>,</span>
-    <span class="illustration f-b"><a href="illustration" class="illustration u-l <%- current.source != 'index' ? '' : 'hot' %>">illustration</a>,</span><br>
-    <span class="identity-development f-b"><a href="identity-development" class="identity-development u-l <%- current.source != 'index' ? '' : 'hot' %>">identity development</a>,</span><br class="p-br">
-    <span class="exhibition-design p-br f-b"><a href="exhibition-design" class="exhibition-design u-l <%- current.source != 'index' ? '' : 'hot' %>">exhibition design</a>,</span>
-    <span class="exhibition-design f-b"><a href="exhibition-design" class="exhibition-design <%- current.source != 'index' ? '' : 'hot' %>">
-      <span class="exhibition-design l-br"><span class="u-l">exhibition</span></span><br class="l-br">
-      <span class="exhibition-design l-br"><span class="u-l">design</span>,</span>
-    </a></span>
-    <span class="special-projects f-b"><a href="special-projects" class="special-projects <%- current.source != 'index' ? '' : 'hot' %>">
-      <span class="special-projects p-br"><span class="u-l">special</span></span><br class="p-br">
-      <span class="special-projects p-br"> <span class="u-l">projects</span>,</span>
-    </a></span>
-    <span class="special-projects l-br f-b"><a href="special-projects" class="special-projects u-l <%- current.source != 'index' ? '' : 'hot' %>">special projects</a>,</span>
-    <span class="animation f-b"><a href="animation" class="animation u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
-    <br class="l-br"> and<br class="p-br"> sometimes
-    <span class="art-commissions f-b"><a href="art-commissions" class="art-commissions <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
-    <br>Click <span><a href="work.html" id="work" class="u-l">here</a></span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact.html" class="contact u-l">contact us</a></span> if you’d<br> like to learn more.</span>
-  </h1>
+<!--
+"p-br": line break is activated in portrait view
+"l-br": line break is activated in landscape view
+"u-l": special underline
+"f-b": filter button
+-->
+<h1>
+  Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
+  <span class="print-design f-b"><a href="print-design" class="print-design u-l <%- current.source != 'index' ? '' : 'hot' %>">print design</a>,</span>
+  <span class="illustration f-b"><a href="illustration" class="illustration u-l <%- current.source != 'index' ? '' : 'hot' %>">illustration</a>,</span><br>
+  <span class="identity-development f-b"><a href="identity-development" class="identity-development u-l <%- current.source != 'index' ? '' : 'hot' %>">identity development</a>,</span><br class="p-br">
+  <span class="exhibition-design p-br f-b"><a href="exhibition-design" class="exhibition-design u-l <%- current.source != 'index' ? '' : 'hot' %>">exhibition design</a>,</span>
+  <span class="exhibition-design f-b"><a href="exhibition-design" class="exhibition-design <%- current.source != 'index' ? '' : 'hot' %>">
+    <span class="exhibition-design l-br"><span class="u-l">exhibition</span></span><br class="l-br">
+    <span class="exhibition-design l-br"><span class="u-l">design</span>,</span>
+  </a></span>
+  <span class="special-projects f-b"><a href="special-projects" class="special-projects <%- current.source != 'index' ? '' : 'hot' %>">
+    <span class="special-projects p-br"><span class="u-l">special</span></span><br class="p-br">
+    <span class="special-projects p-br"> <span class="u-l">projects</span>,</span>
+  </a></span>
+  <span class="special-projects l-br f-b"><a href="special-projects" class="special-projects u-l <%- current.source != 'index' ? '' : 'hot' %>">special projects</a>,</span>
+  <span class="animation f-b"><a href="animation" class="animation u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
+  <br class="l-br"> and<br class="p-br"> sometimes
+  <span class="art-commissions f-b"><a href="art-commissions" class="art-commissions <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
+  <br>Click <span><a href="work.html" id="work" class="u-l">here</a></span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact.html" class="contact u-l">contact us</a></span> if you’d<br> like to learn more.</span>
+</h1>
