--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= owner %><%= title %></title>
+    <title><%= title %></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="<%= description %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,13 +10,9 @@
   </head>
   <body>
     <div id="page">
-
       <%- partial('_nav') %>
-
       <%- yield %>
-
       <%- partial('_footer') %>
-
     </div>
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/main.js"></script>
