--- a/public/work.ejs
+++ b/public/work.ejs
@@ -1,11 +1,8 @@
-<div id="main">
 
   <section id="landing" class="hidden">
-    <%- partial('_landing') %>
+    <%- partial('_includes/_landing') %>
   </section>
 
   <section id="grid" class="active">
-    <%- partial('_cards') %>
+    <%- partial('_includes/_cards') %>
   </section>
-
-</div>
